ho cancellato la classe home aggiornando i vari riferimenti e passaggi di parametri perchè mi sono accorto che era semplicemente un duplicato della stanza centrale

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             	<version>0.0.8</version>
             	
             	<configuration>
-                	<mainClass>com.mondsciomegn.salagiochi.gui.Home</mainClass>
+                	<mainClass>com.mondsciomegn.salagiochi.gui.Room</mainClass>
             	</configuration>
        		</plugin>
     	</plugins>
