--- a/salagiochi/.project
+++ b/salagiochi/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mondsciomegnSalaGiochi</name>
+	<name>salagiochi</name>
 	<comment></comment>
 	<projects>
 	</projects>
